# opt-py-sandbox

./: .gitignore  README.md  pyproject.toml
docs/: CBC.md  HIGHS.md  MIP.md  UV.md
src/: main.py  run-docplex.py  run-gurobipy.py  run-mip.py  run-pulp.py
