[project]
name = "opt-py-sandbox"
version = "0.1.0"
description = "mathematical optimization with python: sandbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docplex>=2.29.241",
    "gurobi-logtools>=3.2.0",
    "gurobipy>=12.0.1",
    "highspy>=1.9.0",
    "matplotlib>=3.10.0",
    "mip>=1.16-pre",
    "mypy>=1.15.0",
    "numpy>=2.2.3",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "pulp>=3.0.2",
    "pyscipopt>=5.3.0",
    "scipy>=1.15.2",
]
